# Switchboard-rust

./: .gitignore  CHANGELOG.md  CHAOS_TEST_RESULTS.md  LICENSE  OLLAMA_SETUP.md  PHASE_8_COMPLETION.md  PYTHON_SDK.md  PYTHON_SDK_IMPLEMENTATION.md  PYTHON_SDK_INDEX.md  QUICK_START.md  README.md  SDK_DELIVERY_SUMMARY.md  SDK_PYTHON.md  chaos_test.py  demo_temp.js  package-lock.json  run_tests.py  switchboard.py  test_switchboard.py  test_ws_client.js
.github/workflows/: ci.yml  pages.yml
demo/: index.html
docs/: TLS.md  index.html
docs/demo/: index.html
examples/: basic.py  example_concurrent.py  example_publish.py  example_subscribe.py  multi_topic.py  performance.py  work_queue.py
switchboard-flow/: Cargo.toml  README.md
switchboard-flow/examples/: uppercase_pipeline.rs
switchboard-flow/src/: executor.rs  graph.rs  ids.rs  lib.rs  node.rs  yaml_loader.rs
switchboard-flow/tests/: executor.rs
switchboard-llm-fabric/: 01-SPEC.md  02-switchboard_adapter.rs  03-switchboard_client.py  Cargo.toml  OLLAMA_INTEGRATION.md  OLLAMA_TESTING.md  README.md  openai_compat_server.py  stub_inference_server.py
switchboard-llm-fabric/examples/: mock_ollama_adapter.rs  ollama_adapter.rs  ollama_integration.rs  stub_inference_server.rs
switchboard-llm-fabric/src/: lib.rs
switchboard-runtime/: Cargo.toml
switchboard-runtime/src/: config.rs  lib.rs  lifecycle.rs
switchboard-studio/: .gitignore  ARCHITECTURE.md  DESIGN_SYSTEM.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
switchboard-studio/src/: App.svelte  app.css  stores.js
switchboard-studio/src/components/: BottomComposer.svelte  ChatCanvas.svelte  KVInspector.svelte  MetricsPanel.svelte  ModelCard.svelte  Navigation.svelte  PipelineVisualizer.svelte  StatusBar.svelte
switchboard_refactored/switchboard/: Cargo.toml  Dockerfile
switchboard_refactored/switchboard/src/: connection.rs  connection_ws.rs  lib.rs  main.rs  metrics.rs  protocol.rs  router.rs  state.rs  trie_router.rs
switchboard_refactored/switchboard/src/transport/: mod.rs  shm.rs
switchboard_refactored/switchboard/tests/: demo_page.rs  large_frame_limit.rs  masked_ws.rs  ws_gateway.rs
tools/: demo_ws_test.js  playwright_demo.js  run_bench_small.sh
