[package]
name        = "switchboard-runtime"
version     = "0.1.0"
edition     = "2021"
description = "Node lifecycle and configuration management for Switchboard dataflow graphs"

[dependencies]
switchboard = { path = "../switchboard_refactored/switchboard" }
switchboard-flow = { path = "../switchboard-flow" }

tokio       = { version = "1", features = ["full"] }
bytes       = "1"
async-trait = "0.1"
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_yaml  = "0.9"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
