[package]
name        = "switchboard"
version     = "0.2.0"
edition     = "2021"
description = "Zero-copy async message router"

[[bin]]
name = "switchboard"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Zero-copy byte buffers
bytes = "1"

# Lock-free skip list for topic registry
crossbeam-skiplist = "0.1"

# Async traits
async-trait = "0.1"

# Parking lot synchronization primitives (faster than std::sync)
parking_lot = "0.12"

# Concurrent hash map (sharded locking)
dashmap = "5"

# Async stream utilities and combinators
tokio-stream = { version = "0.1", features = ["sync", "net"] }

# WebSocket gateway
futures-util = "0.3"
tokio-tungstenite = "0.20"

# Error handling
anyhow  = "1"
thiserror = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.14"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto       = "thin"
codegen-units = 1
